fix overflow issue

--- a/assets/scss/4-modules/_modal.css
+++ b/assets/scss/4-modules/_modal.css
@@ -5,6 +5,7 @@
 	backdrop-filter: blur(5px);
 	align-content: center;
 	padding: var(--length-spacer);
+	overflow-y: scroll;
 }
 
 .modal {
